| Summary: | ASTERISK-30406: pbx_ael: Global variables are not expanded. | ||||
| Reporter: | Sean Bright (seanbright) | Labels: | |||
| Date Opened: | 2023-01-26 14:30:49.000-0600 | Date Closed: | 2023-01-30 07:41:29.000-0600 | ||
| Priority: | Minor | Regression? | |||
| Status: | Closed/Complete | Components: | PBX/pbx_ael | ||
| Versions: | 18.16.0 | Frequency of Occurrence | Constant | ||
| Related Issues: |
| ||||
| Environment: | Attachments: | ||||
| Description: | Global variables defined within AEL are not expanded. For example:
{noformat} globals { Kphones=SIP/KC470IP&SIP/KSnom870 Sphones=SIP/SYealinkT38G&SIP/SGC610IP Allphones=${Kphones}&${Sphones} } {noformat} Will result in Allphones having the value: {noformat} ${Kphones}&${Sphones} {noformat} This differs from {{pbx_config}} behavior which would expand the {{Kphones}} and {{Sphones}} variables. | ||||
| Comments: | By: Asterisk Team (asteriskteam) 2023-01-26 14:30:52.441-0600 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. Please note that log messages and other files should not be sent to the Sangoma Asterisk Team unless explicitly asked for. All files should be placed on this issue in a sanitized fashion as needed. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. Please note that by submitting data, code, or documentation to Sangoma through JIRA, you accept the Terms of Use present at [https://www.asterisk.org/terms-of-use/|https://www.asterisk.org/terms-of-use/]. By: Friendly Automation (friendly-automation) 2023-01-30 07:41:30.910-0600 Change 19839 merged by Friendly Automation: pbx_ael: Global variables are not expanded. [https://gerrit.asterisk.org/c/asterisk/+/19839|https://gerrit.asterisk.org/c/asterisk/+/19839] By: Friendly Automation (friendly-automation) 2023-01-30 07:48:12.615-0600 Change 19838 merged by Friendly Automation: pbx_ael: Global variables are not expanded. [https://gerrit.asterisk.org/c/asterisk/+/19838|https://gerrit.asterisk.org/c/asterisk/+/19838] By: Friendly Automation (friendly-automation) 2023-01-30 08:51:34.298-0600 Change 19796 merged by George Joseph: pbx_ael: Global variables are not expanded. [https://gerrit.asterisk.org/c/asterisk/+/19796|https://gerrit.asterisk.org/c/asterisk/+/19796] | ||||